<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="ChinaMainland">China +86</string>
    <string name="Owner">%s (Host)</string>
    <string name="RequestsForPermission">Blockman Multiplayer for MCPE need permission to read SD card for user icon, map and skin of Minecraft.</string>
    <string name="aLongDistanceLogin">"Your account logged in by other device
Disconnect with server"</string>
    <string name="about1">Copyright © 2017 Blockman Multiplayer for MCPE.</string>
    <string name="about2">All Right Reserved.</string>
    <string name="aboutMe">About Us</string>
    <string name="about_us_notes">Please noted that Blockman Multiplayer for MCPE is not a official Minecraft product, not approved by or associated with Mojang.</string>
    <string name="acceptAdd">Accept</string>
    <string name="account">Account Name</string>
    <string name="accountSetting">Account Settings</string>
    <string name="action_settings">Settings</string>
    <string name="code">SMS verification code</string>
    <string name="day_sign_in">Check in</string>
    <string name="everyDayCreateServer">Create a server</string>
    <string name="everyDayOnlineAnHour">Online more than 1 hour</string>
    <string name="everyDayPlayGame">Join any games more than 10 mins</string>
    <string name="everyDaySignIn">Daily check in</string>
    <string name="everyDaySignInReceive">Get</string>
    <string name="everyDayTask">Daily Task</string>
    <string name="inputCode">Please enter SMS verification code</string>
    <string name="inputPhoneNumber">Please enter your phone number.</string>
    <string name="location">Location</string>
    <string name="mobilePhoneMsg">Linking phone number increases account security</string>
    <string name="newPassword">New password:</string>
    <string name="newPasswordAgain">Re-enter new password:</string>
    <string name="phoneNumber">Phone number</string>
    <string name="sure">OK</string>
    <string name="textGetCode">Get Captcha</string>
    <string name="float_build_settlement_my_rank">my rank</string>
    <string name="float_build_settlement_nick_name">nick name</string>
    <string name="float_build_settlement_ranking">rank</string>
    <string name="float_reward_stamina">Consume Stamina: %s</string>
    <string name="fragment_task_received_999_flowers">Received 999 flowers</string>
    <string name="fragment_task_received_99_flowers">Received 99 flowers</string>
    <string name="fragment_task_received_9_flowers">Received 9 flowers</string>
    <string name="fragment_task_send_999_flowers">Gave 999 flowers</string>
    <string name="fragment_task_send_99_flowers">Gave 99 flowers</string>
    <string name="fragment_task_send_9_flowers">Gave 9 flowers</string>
    <string name="gold">Gold</string>
    <string name="reportGameCrash">Crash</string>
    <string name="reportMainQue">Why are you leaving?</string>
    <string name="reportNext">Submit</string>
    <string name="reportSthComeUp">Interruption (Calling,Message etc)</string>
    <string name="reportWedge">Game freezes when I join the server</string>
    <string name="task_CDKey">Please enter the CD-KEY to receive gift</string>
    <string name="task_fragment_play_games">Join mini-games once</string>
    <string name="territory_cost_description_num">Number of required tickets</string>
    <string name="territory_cost_description_num_1">8</string>
    <string name="territory_cost_description_num_2">30</string>
    <string name="territory_cost_description_num_3">75</string>
    <string name="territory_cost_description_num_4">120</string>
    <string name="territory_cost_description_num_5">240</string>
    <string name="territory_cost_description_time">Time for Using Territory</string>
    <string name="territory_cost_description_time_1">1 week</string>
    <string name="territory_cost_description_time_2">1 month</string>
    <string name="territory_cost_description_time_3">3 months</string>
    <string name="territory_cost_description_time_4">6 months</string>
    <string name="territory_cost_description_time_5">1 year</string>
    <string name="tribe">Clan</string>
    <string name="tribe_territory_cost_description_answer_1">Territory Ticket: It uses to rent Territory for your clan.</string>
    <string name="tribe_territory_cost_description_answer_2">The territory cost can be composed by contribution that member players contributed.</string>
    <string name="tribe_territory_cost_description_answer_3">Chief and elders have right to use.</string>
    <string name="tribe_territory_cost_description_answer_4">"1 Territory ticket=16,000 contribution degree
 more contribution degree, Playing games and sign in can get more EXP."</string>
    <string name="tribe_territory_cost_description_question_1">1.What is Territory Ticket?</string>
    <string name="tribe_territory_cost_description_question_2">2.Composition of territory ticket?</string>
    <string name="tribe_territory_cost_description_question_3">3.Who can use Territory Ticket?</string>
    <string name="tribe_territory_cost_description_question_4">4.Rewards when you donate?</string>
    <string name="tribe_territory_cost_description_question_5">5. How many Territory Tickets I need for rent Territory?</string>
    <string name="everyDayPartner999Flowers">Give 999 flowers to lover</string>
    <string name="everyDayPartner99Flowers">Give 99 flowers to lover</string>
    <string name="everyDayPartner9Flowers">Give 9 flowers to lover</string>
    <string name="next_time_shell">Next Time</string>
    <string name="share_to_circle">Share to Circle</string>
    <string name="tribe_war_capture_flag_num">Flags</string>
    <string name="tribe_war_exp">Exp</string>
    <string name="tribe_war_integral">Integral(Add by energy)</string>
    <string name="tribe_war_win_or_lose">Result</string>
</resources>