<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/bg_one_grid_50" android:paddingLeft="18.0dip" android:paddingTop="32.0dip" android:paddingRight="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/new_ui_margin" android:layout_marginTop="19.0dip" android:layout_marginRight="@dimen/new_ui_margin" android:layout_marginBottom="@dimen/new_ui_margin">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="14.0dip">
            <TextView android:text="@string/tribe_territory_cost_description_question_1" style="@style/tribe_estate_introduction_question_text_style" />
            <TextView android:text="@string/tribe_territory_cost_description_answer_1" style="@style/tribe_estate_introduction_answer_text_style" />
        </LinearLayout>
        <View android:background="@color/line_bg" android:layout_width="fill_parent" android:layout_height="@dimen/lineH" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="14.0dip">
            <TextView android:text="@string/tribe_territory_cost_description_question_2" style="@style/tribe_estate_introduction_question_text_style" />
            <TextView android:text="@string/tribe_territory_cost_description_answer_2" style="@style/tribe_estate_introduction_answer_text_style" />
        </LinearLayout>
        <View android:background="@color/line_bg" android:layout_width="fill_parent" android:layout_height="@dimen/lineH" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="14.0dip">
            <TextView android:text="@string/tribe_territory_cost_description_question_3" style="@style/tribe_estate_introduction_question_text_style" />
            <TextView android:text="@string/tribe_territory_cost_description_answer_3" style="@style/tribe_estate_introduction_answer_text_style" />
        </LinearLayout>
        <View android:background="@color/line_bg" android:layout_width="fill_parent" android:layout_height="@dimen/lineH" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="14.0dip">
            <TextView android:text="@string/tribe_territory_cost_description_question_4" style="@style/tribe_estate_introduction_question_text_style" />
            <TextView android:text="@string/tribe_territory_cost_description_answer_4" style="@style/tribe_estate_introduction_answer_text_style" />
        </LinearLayout>
        <View android:background="@color/line_bg" android:layout_width="fill_parent" android:layout_height="@dimen/lineH" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="14.0dip">
            <TextView android:text="@string/tribe_territory_cost_description_question_5" style="@style/tribe_estate_introduction_question_text_style" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/bg_fragment_territory_cost_description_title" android:paddingLeft="@dimen/new_ui_margin" android:paddingRight="@dimen/new_ui_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="22.0dip" android:layout_marginBottom="4.0dip">
                <TextView android:layout_marginRight="@dimen/new_ui_margin" android:text="@string/territory_cost_description_time" style="@style/tribe_level_item_title_text" />
                <TextView android:text="@string/territory_cost_description_num" style="@style/tribe_level_item_title_text" />
            </LinearLayout>
            <LinearLayout style="@style/tribe_level_item_layout">
                <TextView android:text="@string/territory_cost_description_time_1" style="@style/tribe_level_item_content_text" />
                <TextView android:text="@string/territory_cost_description_num_1" style="@style/tribe_level_item_content_text" />
            </LinearLayout>
            <LinearLayout style="@style/tribe_level_item_layout">
                <TextView android:id="@id/textView2" android:text="@string/territory_cost_description_time_2" style="@style/tribe_level_item_content_text" />
                <TextView android:text="@string/territory_cost_description_num_2" style="@style/tribe_level_item_content_text" />
            </LinearLayout>
            <LinearLayout style="@style/tribe_level_item_layout">
                <TextView android:id="@id/textView3" android:text="@string/territory_cost_description_time_3" style="@style/tribe_level_item_content_text" />
                <TextView android:text="@string/territory_cost_description_num_3" style="@style/tribe_level_item_content_text" />
            </LinearLayout>
            <LinearLayout style="@style/tribe_level_item_layout">
                <TextView android:id="@id/textView4" android:text="@string/territory_cost_description_time_4" style="@style/tribe_level_item_content_text" />
                <TextView android:text="@string/territory_cost_description_num_4" style="@style/tribe_level_item_content_text" />
            </LinearLayout>
            <LinearLayout style="@style/tribe_level_item_layout">
                <TextView android:id="@id/textView5" android:text="@string/territory_cost_description_time_5" style="@style/tribe_level_item_content_text" />
                <TextView android:text="@string/territory_cost_description_num_5" style="@style/tribe_level_item_content_text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
