<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:paddingBottom="12.0dip" android:scrollbars="none" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="never">
        <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/rlTop" android:background="@drawable/bg_tribe_contribution_ranking_title" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="fill_parent" android:layout_height="140.0dip" android:src="@drawable/task_sky_title" android:scaleType="fitXY" />
                <RelativeLayout android:background="@drawable/bg_task_title" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginTop="80.0dip" android:layout_centerHorizontal="true">
                    <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/everyDayTask" android:layout_centerHorizontal="true" />
                </RelativeLayout>
            </RelativeLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_below="@id/rlTop">
                <com.mcpeonline.multiplayer.view.DailyTaskItemView android:id="@id/vPartner9Flowers" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:dailyText="@string/everyDayPartner9Flowers" app:buttonText="@string/everyDaySignInReceive" app:empirical="1" app:isVip="false" app:daily_type="partner" />
                <com.mcpeonline.multiplayer.view.DailyTaskItemView android:id="@id/vPartner99Flowers" android:layout_width="fill_parent" android:layout_height="wrap_content" app:dailyText="@string/everyDayPartner99Flowers" app:buttonText="@string/everyDaySignInReceive" app:empirical="15" app:isVip="false" app:daily_type="partner" />
                <com.mcpeonline.multiplayer.view.DailyTaskItemView android:id="@id/vPartner999Flowers" android:layout_width="fill_parent" android:layout_height="wrap_content" app:dailyText="@string/everyDayPartner999Flowers" app:buttonText="@string/everyDaySignInReceive" app:empirical="150" app:isVip="false" app:daily_type="partner" />
                <com.mcpeonline.multiplayer.view.DailyTaskItemView android:id="@id/vSignIn" android:layout_width="fill_parent" android:layout_height="wrap_content" app:dailyText="@string/everyDaySignIn" app:buttonText="@string/day_sign_in" app:empirical="3" app:isVip="true" />
                <com.mcpeonline.multiplayer.view.DailyTaskItemView android:id="@id/vCreateServer" android:layout_width="fill_parent" android:layout_height="wrap_content" app:dailyText="@string/everyDayCreateServer" app:buttonText="@string/everyDaySignInReceive" app:empirical="3" app:isVip="true" />
                <com.mcpeonline.multiplayer.view.DailyTaskItemView android:id="@id/vOnlineAnHour" android:layout_width="fill_parent" android:layout_height="wrap_content" app:dailyText="@string/everyDayOnlineAnHour" app:buttonText="@string/everyDaySignInReceive" app:empirical="5" app:isVip="true" />
                <com.mcpeonline.multiplayer.view.DailyTaskItemView android:id="@id/vPlayGame" android:layout_width="fill_parent" android:layout_height="wrap_content" app:dailyText="@string/everyDayPlayGame" app:buttonText="@string/everyDaySignInReceive" app:empirical="5" app:isVip="true" />
                <com.mcpeonline.multiplayer.view.DailyTaskItemView android:id="@id/vRealmsTask" android:layout_width="fill_parent" android:layout_height="wrap_content" app:dailyText="@string/task_fragment_play_games" app:buttonText="@string/everyDaySignInReceive" app:empirical="10" app:isVip="true" />
                <com.mcpeonline.multiplayer.view.DailyTaskItemView android:id="@id/vCDKey" android:layout_width="fill_parent" android:layout_height="wrap_content" app:dailyText="@string/task_CDKey" app:buttonText="@string/everyDaySignInReceive" app:empirical="0" app:isVip="false" />
                <com.mcpeonline.multiplayer.view.DailyTaskItemView android:id="@id/vGiveNineFlowers" android:layout_width="fill_parent" android:layout_height="wrap_content" app:dailyText="@string/fragment_task_send_9_flowers" app:buttonText="@string/everyDaySignInReceive" app:empirical="10" app:isVip="false" />
                <com.mcpeonline.multiplayer.view.DailyTaskItemView android:id="@id/vReceivedNineFlowers" android:layout_width="fill_parent" android:layout_height="wrap_content" app:dailyText="@string/fragment_task_received_9_flowers" app:buttonText="@string/everyDaySignInReceive" app:empirical="10" app:isVip="false" />
                <com.mcpeonline.multiplayer.view.DailyTaskItemView android:id="@id/vGiveNinetyFlowers" android:layout_width="fill_parent" android:layout_height="wrap_content" app:dailyText="@string/fragment_task_send_99_flowers" app:buttonText="@string/everyDaySignInReceive" app:empirical="15" app:isVip="false" />
                <com.mcpeonline.multiplayer.view.DailyTaskItemView android:id="@id/vReceivedNinetyFlowers" android:layout_width="fill_parent" android:layout_height="wrap_content" app:dailyText="@string/fragment_task_received_99_flowers" app:buttonText="@string/everyDaySignInReceive" app:empirical="15" app:isVip="false" />
                <com.mcpeonline.multiplayer.view.DailyTaskItemView android:id="@id/vGiveNineHundredFlowers" android:layout_width="fill_parent" android:layout_height="wrap_content" app:dailyText="@string/fragment_task_send_999_flowers" app:buttonText="@string/everyDaySignInReceive" app:empirical="20" app:isVip="false" />
                <com.mcpeonline.multiplayer.view.DailyTaskItemView android:id="@id/vReceivedNineHundredFlowers" android:layout_width="fill_parent" android:layout_height="wrap_content" app:dailyText="@string/fragment_task_received_999_flowers" app:buttonText="@string/everyDaySignInReceive" app:empirical="20" app:isVip="false" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
