<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/allBackgroundColor" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/textSize14Sp" android:textColor="@color/textContextColor" android:gravity="center_vertical" android:id="@id/tvTitle" android:paddingLeft="15.0dip" android:paddingRight="@dimen/tpSize" android:layout_width="fill_parent" android:layout_height="@dimen/heightNum40" android:layout_marginTop="5.0dip" android:text="@string/mobilePhoneMsg" />
    <LinearLayout android:id="@id/llLocation" android:paddingLeft="@dimen/pdSize" android:paddingRight="@dimen/pdSize" android:layout_marginTop="10.0dip" style="@style/meFragmentItem">
        <TextView android:gravity="center_vertical" android:text="@string/location" style="@style/mobilePhoneTextStyle" />
        <TextView android:textColor="@color/textMainColor" android:textColorHint="@color/hintColor" android:gravity="center_vertical" android:id="@id/tvLocation" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:text="@string/ChinaMainland" android:layout_weight="1.0" style="@style/mobilePhoneTextStyle" />
        <ImageView android:layout_gravity="right|center" style="@style/arrowStyle" />
    </LinearLayout>
    <LinearLayout android:paddingLeft="@dimen/pdSize" android:paddingRight="@dimen/pdSize" android:clickable="false" style="@style/meFragmentItem">
        <TextView android:gravity="center_vertical" android:text="@string/phoneNumber" style="@style/mobilePhoneTextStyle" />
        <EditText android:id="@id/etPhoneNumber" android:hint="@string/inputPhoneNumber" style="@style/inputPhoneNumber" />
        <ImageView android:layout_gravity="right|center" android:id="@id/ivClear" style="@style/inputClear" />
    </LinearLayout>
    <LinearLayout android:paddingLeft="@dimen/pdSize" android:paddingRight="@dimen/pdSize" android:clickable="false" style="@style/meFragmentItem">
        <LinearLayout android:orientation="horizontal" android:clickable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:gravity="center_vertical" android:text="@string/code" style="@style/mobilePhoneTextStyle" />
            <EditText android:id="@id/etInputCode" android:hint="@string/inputCode" android:maxLength="4" android:inputType="number" style="@style/inputPhoneNumber" />
        </LinearLayout>
        <Button android:textSize="@dimen/textSize14Sp" android:textColor="@color/white" android:gravity="center" android:id="@id/btnGetCode" android:background="@drawable/btn_light_button_selector" android:layout_width="wrap_content" android:layout_height="36.0dip" android:minWidth="90.0dip" android:text="@string/textGetCode" />
    </LinearLayout>
    <LinearLayout android:id="@id/llInputPassword" android:paddingLeft="@dimen/pdSize" android:paddingRight="@dimen/pdSize" android:clickable="false" style="@style/meFragmentItem">
        <TextView android:text="@string/newPassword" style="@style/mobilePhoneTextStyle" />
        <EditText android:id="@id/etNewPassword" android:layout_marginLeft="20.0dip" android:inputType="textPassword" style="@style/accountEditTextPasswordStyle" />
        <ImageView android:id="@id/ivClearNewPassword" android:layout_width="18.0dip" android:layout_height="18.0dip" android:src="@drawable/btn_clear_selector" />
    </LinearLayout>
    <LinearLayout android:id="@id/llInputPasswordAgain" android:paddingLeft="@dimen/pdSize" android:paddingRight="@dimen/pdSize" android:clickable="false" style="@style/meFragmentItem">
        <TextView android:text="@string/newPasswordAgain" style="@style/mobilePhoneTextStyle" />
        <EditText android:id="@id/etNewPasswordAgain" android:layout_marginLeft="20.0dip" android:inputType="textPassword" style="@style/accountEditTextPasswordStyle" />
        <ImageView android:id="@id/ivClearNewPasswordAgain" android:layout_width="18.0dip" android:layout_height="18.0dip" android:src="@drawable/btn_clear_selector" />
    </LinearLayout>
    <Button android:id="@id/btnSure" android:layout_marginTop="10.0dip" android:text="@string/sure" style="@style/newBigBtnStyle" />
</LinearLayout>
